@@ -81,6 +81,8 @@ FLAGS:
    links      I     Number of hard links
    uid        I     User ID of owner
    gid        I     Uroup ID of owner
+   user       S     Username of the owner
+   group      S     Group of the owner
    blksize    I     Optimal block size for filesystem I/O
    blocks     I     Number of 512B blocks allocated
    sparse     F     File's sparseness.
