@@ -56,6 +56,7 @@
  *   - % Automake: --enable-precheck does not disable regular (or chrooted) binary build (rev. 18_b1)
  *   - ! self_get_path checking read access twice (rev. 18_b2)
  *   - ~ Blank directory names written during dirlog rebuild (only in certain cases) (rev. 19)
+ *   - + 'user' and 'group' fields, see under FILESYSTEM in DATA_STRUCTURES (rev. 19_b1)
  *
  * v2.2:
  *
